# OptiCredit_Backend

./: .env  .env.production  .gitignore  QUICKSTART.md  README.md  SETUP_MIGRATIONS.md  TESTING_GUIDE.md  main.py  nginx-kashap.conf  pyproject.toml  requirements-dev.txt  requirements.txt  run_migrations.py  seed.py
app/: config.py  main.py
app/api/v1/: __init__.py  admin.py  admin_reports.py  admin_system.py  auth.py  client_settings.py  customers.py  lender.py  lender_products.py  lender_settings.py  loan_applications.py  loan_products.py  loans.py  me.py  notifications.py  reports.py  subscriptions.py  support.py
app/core/: security.py
app/db/: base.py  schema_compat.py  session.py
app/db/migrations/versions/: 3297b0b4ec8e_create_notifications_table.py  (+1 more)
app/middleware/: audit.py
app/models/: __init__.py  lender.py  loan_product.py  notification.py  subscription.py
app/repositories/: loan_application_repo.py  loan_product_repo.py  loan_repo.py  payment_repo.py
app/schemas/: customer.py
app/services/: auth_service.py  customer_service.py  dashboard_service.py  email_service.py  lender_service.py  loan_application_service.py  loan_product_service.py  loan_service.py  notification_service.py  ocr_service.py  payment_service.py  sse_manager.py  startup_seed.py  storage_service.py  token_blacklist.py  user_service.py
app/services/email_templates/: __init__.py  application.py  payment.py  security.py
app/services/notifications/: __init__.py  dispatcher.py  events.py  templates.py
scripts/: dev.ps1
tests/: __init__.py  conftest.py  test_services.py
(+3 files in other folders)
